# law-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: streamlit_app.py
data/: qa_set.jsonl  target_laws.yaml
data/index/: metadata_tags.json
reports/: eval_bm25_top5_20260619_1934.json  eval_embedding_top5_20260619_1932.json  eval_hybrid_top5_20260619_1936.json  final_experiment_report.md  load_test_20260619_2244.md  load_test_20260620_0955.md  serving_profile_20260619_2240.md  serving_profile_20260620_0954.md  week1_baseline_retrieval.md  week2_experiment_results_20260619_2158.md  week2_experiment_results_20260619_2213.md  week2_experiment_results_20260619_2216.md  week2_experiment_results_20260619_2230.md  week2_raw_20260619_2157.json  week2_raw_20260619_2158.json  week2_raw_20260619_2213.json  week2_raw_final_20260619_2230.json
scripts/: build_index.py  collect_data.py  debug_api_response.py  load_test.py  profile_serving.py  run_agent.py  run_week2_experiments.py  tag_metadata.py
src/agent/: agent.py
src/agent/tools/: __init__.py  precedent_search.py  statute_search.py
src/chunking/: metadata_tagger.py  strategies.py
src/collection/: law_api_client.py  precedent_collector.py  precedent_hf_loader.py  statute_collector.py  statute_pdf_loader.py  statute_scraper.py
src/eval/: retrieval_eval.py
src/llm/: base.py
src/rag/: pipeline.py
src/retrieval/: bm25_retriever.py  embedding_retriever.py  hybrid_retriever.py  query_rewriter.py
src/serving/: cache.py  profiler.py
study/: week1_study.md  week2_study.md  week3_study.md
(+2 files in other folders)
