[project]
name = "legal-rag-agent"
version = "0.1.0"
description = "Korean statute & precedent RAG agent with retrieval/serving experiments"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38",
    "requests>=2.32",
    "lxml>=5.3",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "kiwipiepy>=0.18",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "anthropic>=0.34",
    "openai>=1.45",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "datasets>=2.20",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ipykernel>=6.29"]
